# AntiDuplX

./: .gitmodules  LICENSE  README.md  build_linux.sh
prj/cmake/: CMakeLists.txt  Simd.cmake  libjpeg-turbo.cmake
prj/cmd/: GetVersion.cmd
prj/sh/: GetVersion.sh
prj/txt/: AdxVersion.h.txt
prj/vs2022/: AntiDuplX.sln  AntiDuplX.vcxproj  AntiDuplX.vcxproj.filters  Prop.props
src/AntiDuplX/: AdxCommon.h  AdxEngine.cpp  AdxEngine.h  AdxImageFinder.cpp  AdxImageFinder.h  AdxImageInfo.h  AdxImageLoader.cpp  AdxImageLoader.h  AdxImageMatcher.cpp  AdxImageMatcher.h  AdxOptions.h  AdxResultHandler.cpp  AdxResultHandler.h  AdxTurboJpegDecoder.cpp  AdxTurboJpegDecoder.h  AntiDuplX.cpp
